@@ -1,0 +1,77 @@
+describe("map_links.js file", function () {
+  describe("link_loaded", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_request_add", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_request_add_all", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("dist_between_squared", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_comparator", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_request_submit", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_remove_all", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("links_reset", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("GET_links_callback", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_closestEmptyPort", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+
+
+  describe("link_processPorts", function () {
+    it(" ", function () {
+      expect(1).toEqual(1);
+    });
+  });
+});
