@@ -20,7 +20,7 @@ function sel_set_selection(node) {
 
     if (node !== null && node.details.loaded === false) {
         // load details
-        m_selection["titles"].firstChild.innerHTML = "Loading selection..."
+        m_selection["titles"].firstChild.innerHTML = "Loading selection...";
         GET_details(node, sel_update_display);
     } else {
         sel_update_display();
