@@ -1,5 +1,10 @@
 2016-10-17
+fixed bug in timerange for get_details in dbaccess
+reduced usage of global "scale" variable in progression to removing the global.
+upgraded test generator to not overwrite existing data
 added tests for map_ports.js
+added tests for map_node.js
+started tests for map_selection.js
 
 2016-10-14
 Started testing the JS
